# Patcher

./: .gitignore  AUTHORS.md  CMakeLists.txt  LICENSE  README.md
source/patcher/: main.cpp  patcher.cpp  patcher.h  typedefs.h  uuid.cpp  uuid.h  version.h
